@@ -1,0 +1,20 @@
+pkgname=dcp145c
+pkgver=1.1.2
+pkgrel=2
+license=('GPL' 'custom:Brother')
+arch=('i686')
+pkgdesc="Brother DCP-145C Printer driver"
+url="http://welcome.solutions.brother.com/bsc/public_s/id/linux/en/download_prn.html#DCP-145C"
+depends=('cups' 'ghostscript')
+install=$pkgname.install
+source=(http://pub.brother.com/pub/com/bsc/linux/dlf/${pkgname}lpr-$pkgver-$pkgrel.i386.rpm
+        http://pub.brother.com/pub/com/bsc/linux/dlf/${pkgname}cupswrapper-$pkgver-$pkgrel.i386.rpm
+        readme)
+md5sums=('bd8b8ab373172266eed34040658344be'
+         '58ec23ccb3e8d7617006b9659fb36a95'
+         'b7da5fa7b76a5a2478098fa759773dbf')
+
+package() {
+  cp -r $srcdir/usr $pkgdir
+  sed -i 's|/etc/init.d/cups |/etc/rc.d/cupsd |g' $pkgdir/usr/local/Brother/Printer/$pkgname/cupswrapper/cupswrapper$pkgname
+}
