@@ -1,0 +1,8 @@
+post_install() {
+  /usr/local/Brother/Printer/dcp145c/cupswrapper/cupswrapperdcp145c -i
+}
+
+pre_remove() {
+  /usr/local/Brother/Printer/dcp145c/cupswrapper/cupswrapperdcp145c -e
+}
+
