@@ -1,0 +1,12 @@
+before you install this package, make sure cups recognizes your printer
+
+# lpinfo -v
+
+there should be a line like
+usb://Brother/DCP-145C...
+
+how to achieve this:
+run cups daemon
+blacklist usblp module
+turn on the printer
+connect the printer via usb
