@@ -1,0 +1,23 @@
+# Maintainer: Sagar Chalise <chalisesagar@gmail.com>
+
+pkgname=geany-themes
+pkgver=0.21
+pkgrel=1
+pkgdesc="A collection of color schemes for Geany."
+arch=('any')
+url='http://codebrainz.github.com/geany-themes/'
+license=('GPL')
+depends=('geany')
+source=('https://github.com/codebrainz/geany-themes/tarball/0.21')
+md5sums=('3e1bd2789ffe01dfbb9fccc8448693d6')
+
+build() {
+  cd "${srcdir}"
+  rm -f codebrainz-geany-themes-2e5100a/colorschemes/alt.conf
+}
+
+package() {
+  cd "${srcdir}"
+  install -dm755 ${pkgdir}/usr/share/geany/colorschemes
+  install -D -m644 codebrainz-geany-themes-2e5100a/colorschemes/*.conf "${pkgdir}/usr/share/geany/colorschemes/"
+}
