@@ -1,0 +1,15 @@
+[Desktop Entry]
+Type=Application
+Encoding=UTF-8
+Name=Compiz
+Exec=bash -c 'compiz --replace --sm-client-id $DESKTOP_AUTOSTART_ID --keep-desktop-hints ccp decoration'
+NoDisplay=true
+# name of loadable control center module
+X-GNOME-WMSettingsModule=compiz
+# autostart phase
+X-GNOME-Autostart-Phase=WindowManager
+X-GNOME-Provides=windowmanager
+# name we put on the WM spec check window
+X-GNOME-WMName=compiz
+# back compat only 
+X-GnomeWMSettingsLibrary=compiz
