@@ -1,0 +1,7 @@
+[Desktop Entry]
+Encoding=UTF-8
+Name=GNOME/Compiz
+Comment=This session logs you into the GNOME desktop environment with Compiz and Cairo-Dock
+Exec=/usr/bin/gnome-session --session=gnome-compiz
+Icon=compiz
+Type=XSession
