@@ -1,0 +1,6 @@
+[GNOME Session]
+Name=GNOME Compiz
+RequiredComponents=compiz;avant-window-navigator;gnome-settings-daemon;
+RequiredProviders=notifications;
+DefaultProvider-windowmanager=compiz
+DefaultProvider-notifications=notification-daemon
