@@ -1,12 +1,12 @@
 # Maintainer: Ivy Foster <joyfulgirl@archlinux.us>
 pkgname=luapdf-git
-pkgver=20111018
+pkgver=20111110
 pkgrel=1
 pkgdesc="Micro-PDF framework extensible in lua"
 arch=('i686' 'x86_64')
 url="https://github.com/karottenreibe/luapdf"
 license=('GPL3')
-depends=('lua' 'luafilesystem' 'poppler' 'gtk2' 'libunique')
+depends=('lua' 'luafilesystem' 'poppler-glib' 'gtk2' 'libunique')
 makedepends=('git' 'help2man')
 optdepends=('luajit: just-in-time compilation')
 provides=('luapdf')
