@@ -1,6 +1,6 @@
 pkgname=mate-file-manager
 pkgver=2011.11.10
-pkgrel=1
+pkgrel=2
 pkgdesc="The MATE shell and file manager"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -10,13 +10,13 @@ url="http://matsusoft.com.ar/projects"
 options=('!libtool' '!emptydirs')
 install=mate-file-manager.install
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
-sha256sums=('4807b5431c3760139d463330e83455d1b560a6d873c4e2c4f3a57f6eb1719ec0')
+sha256sums=('0601e5cd1ccfd9e2b208a66925d3cc87e41cc690efbcf57fc7c083d8175d4dc7')
 groups=('mate')
 
 build() {
 	cd "${srcdir}/${pkgname}"
 
-	./configure --prefix=/usr --sysconfdir=/etc \
+	./autogen.sh --prefix=/usr --sysconfdir=/etc \
 		--localstatedir=/var --disable-static \
 		--libexecdir=/usr/lib/caja --enable-unique \
 		--disable-update-mimedb || return 1
