@@ -5,16 +5,18 @@
 
 pkgname=nvidia-fbcondecor
 pkgver=285.05.09
-_kernver='3.0-fbcondecor'
-pkgrel=1
-pkgdesc="NVIDIA drivers for linux kernel 3.0 patched with fbcondecor."
+_extramodules=extramodules-3.1-fbcondecor
+_kernver="$(cat /lib/modules/${_extramodules}/version)"
+pkgrel=3
+pkgdesc="NVIDIA drivers for linux kernel 3.1 patched with fbcondecor."
 arch=('i686' 'x86_64')
 url="http://www.nvidia.com/"
-depends=('linux-fbcondecor' 'nvidia-utils')
-makedepends=('linux-headers')
+depends=('linux-fbcondecor>=3.1' 'linux-fbcondecor<3.2' "nvidia-utils=${pkgver}")
+makedepends=('linux-headers>=3.1' 'linux-headers<3.2')
 conflicts=('nvidia-96xx' 'nvidia-173xx')
 license=('custom')
 install=nvidia-fbcondecor.install
+
 
 if [ "$CARCH" = "i686" ]; then
         _arch='x86'
@@ -29,17 +31,18 @@ elif [ "$CARCH" = "x86_64" ]; then
 fi
 
 build() {
-        cd $srcdir
-        sh ${_pkg}.run --extract-only
-        cd ${_pkg}/kernel
-        make SYSSRC=/lib/modules/${_kernver}/build module
+        cd "${srcdir}"
+        sh "${_pkg}.run" --extract-only
+        cd "${_pkg}/kernel"
+        make SYSSRC=/lib/modules/"${_kernver}/build" module
 }
 
 package() {
-        install -D -m644 $srcdir/${_pkg}/kernel/nvidia.ko \
-                $pkgdir/lib/modules/${_kernver}/kernel/drivers/video/nvidia.ko
-        install -d -m755 $pkgdir/etc/modprobe.d
-        echo "blacklist nouveau" >> $pkgdir/etc/modprobe.d/nouveau_blacklist.conf
-        sed -i -e "s/KERNEL_VERSION='.*'/KERNEL_VERSION='${_kernver}'/" $startdir/nvidia-fbcondecor.install
+        install -D -m644 "${srcdir}/${_pkg}/kernel/nvidia.ko" \
+                "${pkgdir}/lib/modules/${_extramodules}/nvidia.ko"
+        install -d -m755 "${pkgdir}/etc/modprobe.d"
+	echo "blacklist nouveau" >> "${pkgdir}/etc/modprobe.d/nouveau_blacklist.conf"
+        sed -i -e "s/EXTRAMODULES='.*'/EXTRAMODULES='${_extramodules}'/" "${startdir}/nvidia-fbcondecor.install"
+	gzip "${pkgdir}/lib/modules/${_extramodules}/nvidia.ko"
 }
 
