@@ -1,14 +1,15 @@
 post_install() {
-	KERNEL_VERSION='3.0-fbcondecor'
-	depmod $KERNEL_VERSION
+	EXTRAMODULES='extramodules-3.1-fbcondecor'
+	depmod $(cat /lib/modules/$EXTRAMODULES/version)
 }
 
 post_upgrade() {
-	post_install
+	EXTRAMODULES='extramodules-3.1-fbcondecor'
+	depmod $(cat /lib/modules/$EXTRAMODULES/version)
 	rmmod nvidia || echo 'In order to use the new nvidia module, exit Xserver and unload it manually.'
 }
 
 post_remove() {
-	KERNEL_VERSION='3.0-fbcondecor'
-	depmod $KERNEL_VERSION
+	EXTRAMODULES='extramodules-3.1-fbcondecor'
+	depmod $(cat /lib/modules/$EXTRAMODULES/version)
 }
