@@ -2,16 +2,14 @@
 
 pkgname=zen-puzzle-garden
 pkgver=1.29
-pkgrel=1
-pkgdesc="Zen Puzzle Garden gently tests your ability to rake out an uninterrupted stone garden pattern."
+pkgrel=2
+pkgdesc="Zen Puzzle Garden gently tests your ability to rake out an uninterrupted stone garden pattern.  You must purchase the game."
 url="http://www.lexaloffle.com/zen.htm"
 license=('custom: "commercial"')
 groups=('humblevoxatronbundle' 'humblebundles')
 arch=('i686' 'x86_64')
-[ "${CARCH}" = "x86_64" ] && depends=('lib32-libgl' 'lib32-sdl')
-[ "${CARCH}" = "i686" ] && depends=('libgl' 'sdl')
-[ "${CARCH}" = "x86_64" ] && optdepends=('lib32-alsa-lib: sound support' 'lib32-libpulse: sound support')
-[ "${CARCH}" = "i686" ] && optdepends=('alsa-lib: sound support' 'libpulse: sound support')
+[ "${CARCH}" = "x86_64" ] && depends=('lib32-libgl' 'lib32-sdl' 'lib32-libpulse')
+[ "${CARCH}" = "i686" ] && depends=('libgl' 'sdl' 'libpulse')
 options=(!strip)
 source=("zpg.desktop" "zen-exec" "zpg.png")
 md5sums=('25828d2ac675485a61b2c6e0f5da63e5'
